deploy/app/overlays/home/replicas-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    spec:
      containers:
        - name: auth
          readinessProbe:
            timeoutSeconds: 5
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            timeoutSeconds: 5
            periodSeconds: 20
          startupProbe:
            timeoutSeconds: 5
            periodSeconds: 10
            failureThreshold: 36
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    spec:
      containers:
        - name: backend
          readinessProbe:
            timeoutSeconds: 5
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            timeoutSeconds: 5
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /actuator/health
              port: http
            timeoutSeconds: 5
            periodSeconds: 10
            failureThreshold: 36
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: campus-nginx
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
