deploy/app/overlays/home/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: campus
spec:
  hostnames:
    - campus-home.local
